--- a/doc/Readings.bib
+++ b/doc/Readings.bib
@@ -2,12 +2,66 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for ksauer at 2012-12-05 16:27:34 -0800 
+%% Created for ksauer at 2012-12-07 12:04:36 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{Zaharia:2011,
+	Author = {Matei Zaharia and William J. Bolosky and Kristal Curtis and Armando Fox and David Patterson and Scott Shenker and Ion Stoica and Richard M. Karp and Taylor Sittler},
+	Date-Added = {2012-12-07 12:03:13 -0800},
+	Date-Modified = {2012-12-07 12:04:33 -0800},
+	Journal = {arXiv:1111.5572},
+	Month = {November},
+	Title = {Faster and More Accurate Sequence Alignment with SNAP},
+	Year = {2011}}
+
+@article{Ukkonen:1985,
+	Author = {E. Ukkonen},
+	Date-Added = {2012-12-07 12:02:03 -0800},
+	Date-Modified = {2012-12-07 12:02:29 -0800},
+	Journal = {Information and Control},
+	Number = {1-3},
+	Pages = {100-118},
+	Title = {Algorithms for approximate string matching},
+	Volume = {64},
+	Year = {1985}}
+
+@article{RLi:2009,
+	Author = {Ruiqiang Li and Chang Yu and Yingrui Li and Tak-Wah Lam and Siu-Ming Yiu and Karsten Kristiansen and Jun Wang},
+	Date-Added = {2012-12-07 11:56:26 -0800},
+	Date-Modified = {2012-12-07 11:57:47 -0800},
+	Journal = {Bioinformatics},
+	Number = {15},
+	Pages = {1966-1967},
+	Title = {SOAP2:  an improved ultrafast tool for short read alignment},
+	Volume = {25},
+	Year = {2009}}
+
+@article{Langmead:2012,
+	Author = {B. Langmead and S. Salzberg},
+	Date-Added = {2012-12-07 11:54:53 -0800},
+	Date-Modified = {2012-12-07 11:55:27 -0800},
+	Journal = {Nature Methods},
+	Keywords = {Bowtie2},
+	Pages = {357-359},
+	Title = {Fast gapped-read alignment with Bowtie 2},
+	Volume = {9},
+	Year = {2012}}
+
+@article{Altschul:1990,
+	Author = {S. F. Altschul and W. Gish and W. Miller and E. W. Myers and D. J. Lipman},
+	Date-Added = {2012-12-07 11:52:07 -0800},
+	Date-Modified = {2012-12-07 11:53:06 -0800},
+	Journal = {Journal of Molecular Biology},
+	Keywords = {BLAST},
+	Number = {3},
+	Pages = {403-410},
+	Title = {Basic local alignment search tool},
+	Volume = {215},
+	Year = {1990}}
 
 @inproceedings{Zaharia:2012,
 	Author = {Matei Zaharia and Mosharaf Chowdhury and Tathagata Das and Ankur Dave and Justin Ma and Murphy McCauley and Michael J. Franklin and Scott Shenker and Ion Stoica},
